--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,10 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.lint.dependencies]
+flake8 = "^7.1.1"
+black = "^25.1.0"
+mypy = "^1.14.1"
+isort = "^6.0.0"
+
